# wmf_scraper

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  database.db  pyproject.toml  query_rfs.sql  setup.cfg  setup.image.cfg  x_dummy_comp_list.py
.github/workflows/: publish_coverage.yml
assets/: comp_list.json  load_list.json
coverage/: cov.xml  junit.xml
environment/: .bashrc  Dockerfile.dev  build_image.sh  build_image_dev.sh  build_image_github.sh  default_settings.json  init.sh  init_server.sh  start_image_dev.sh  start_image_github.sh  start_server.sh
scripts/: bash_functions.sh  bash_utils.sh  run_build.sh  run_bump.sh  run_help.sh  run_precommit.sh  run_tests.sh
src/: main.py
src/actions/: competition.py  competitor.py  load.py  query.py  utils.py
src/actions/load/: competition.py  competitors.py  task_results.py  tasks.py  utilities.py
src/common/: environment.py  utilities.py
src/database/: __init__.py  db_engine.py
src/models/: Competition.py  competition.py  competitor.py  load.py  query.py  task.py  task_result.py
src/parser/: competitor.py  parse_utilities.py  task.py  task_results.py  utilities.py
src/routers/: competition.py  competitor.py  load.py  query.py  task.py  task_result.py  version.py
src/tests/: conftest.py  test_competition.py  test_competitor.py  test_task.py  test_task_result.py  test_utilities.py  test_version.py
src/tests/data/competitors_and_tasks/html_examples/: DutchBalloonTrophy_2023.html
src/tests/data/competitors_and_tasks/html_examples_expected/: CECup_2023.json  DutchBalloonTrophy_2023.json  DutchBalloonTrophy_2023_malformed.json
src/tests/data/html_examples/: CECup_2023.html  DutchBalloonTrophy_2023.html  DutchBalloonTrophy_2023_malformed.html
src/tests/data/html_examples_expected/: DutchBalloonTrophy_2023.json  DutchBalloonTrophy_2023_malformed.json
src/tests/data/task_results/html_examples/: CECup_Task1.html
src/tests/data/task_results/html_examples_expected/: CECup_Task1.json
