[project]
name = "WMF_Scraper"
version = "0.0.2"
description = "This is a FASTAPI REST API to obtain and analyse HAB results from WMF"
requires-python = ">=3.9,<4"
keywords = ["Ballooning Results", "WatchMeFly"]
authors = [
  {email = "ivan.ayala.alcalde@gmail.com"},
  {name = "Ivan Ayala"}
]
maintainers = [
  {name = "Ivan Ayala", email = "ivan.ayala.alcalde@gmail.com"}
]

[tool.poetry]
name = "WMF_Scraper"
version = "0.0.2"
description = "This is a FASTAPI REST API to obtain and analyse HAB results from WMF"
authors = ["Ivan Ayala"]
packages = [
    { include = "src" }
]
exclude = ["src/tests"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
coverage-badge = "^1.1.0"
bump2version = "^1.0.1"
autopep8 = "^2.0.2"
pre-commit = "^3.3.1"
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
ruff = "^0.0.286"
loguru = "^0.7.0"

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"

disable = [
    #"missing-module-docstring",
    #"missing-class-docstring",
    #"missing-function-docstring",
    #"broad-except",
    #"wrong-import-order",
    #"wrong-import-position",
    #"import-error",
    #"too-few-public-methods",
    #"no-name-in-module",
    #"global-statement",
    #"redefined-outer-name",
    #"too-many-instance-attributes",
    #"too-many-locals",
    #"too-many-arguments",
    #"duplicate-code"
]

[tool.coverage.run]
omit = ["src/tests/*"]

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]

[tool.ruff]
line-length = 240

[tool.isort]
profile = "black"
