[project]
name = "WMF_Scraper"
version = "1.1.2"
description = "This is a FASTAPI REST API to obtain and analyse HAB results from WMF"
requires-python = ">=3.9,<4"
keywords = ["Ballooning Results", "WatchMeFly"]
authors = [
  {email = "ivan.ayala.alcalde@gmail.com"},
  {name = "Ivan Ayala"}
]
maintainers = [
  {name = "Ivan Ayala", email = "ivan.ayala.alcalde@gmail.com"}
]

[tool.poetry]
name = "WMF_Scraper"
version = "1.1.2"
description = "This is a FASTAPI REST API to obtain and analyse HAB results from WMF"
authors = ["Ivan Ayala"]
packages = [
    { include = "src" }
]
exclude = ["src/tests"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
sqlmodel = "^0.0.22"
sqlalchemy_utils = "^0.41.2"
lxml = "^5.3.0"
fastapi-utils = "^0.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
coverage-badge = "^1.1.2"
bump2version = "^1.0.1"
autopep8 = "^2.3.1"
pre-commit = "^4.0.1"
pytest-benchmark = {extras = ["histogram"], version = "^5.1.0"}
ruff = "^0.8.4"
loguru = "^0.7.3"
typing-inspect = "^0.9.0"

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/tests/*"]

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]

[tool.ruff]
line-length = 240

[tool.isort]
profile = "black"
